tests/paczka1/small_fuzzy/64849557.err
Error in line 2: 3Xxr0AqR S130 53,4
Error in line 5: dJD2h S92 70,1
